Autorest skeleton
